--- a/.github/workflows/prod-full-stack.yml
+++ b/.github/workflows/prod-full-stack.yml
@@ -32,6 +32,7 @@ jobs:
       backendApp: ${{ steps.filter.outputs.backendApp }}
       frontendSite: ${{ steps.filter.outputs.frontendSite }}
     steps:
+    - uses: actions/checkout@main
     # For pull requests it's not necessary to checkout the code
     - uses: dorny/paths-filter@v2
       id: filter
