--- a/.github/workflows/dev-full-stack.yml
+++ b/.github/workflows/dev-full-stack.yml
@@ -12,7 +12,7 @@ on:
 
 env: 
   dnsZone: 'ryanmcvey.me'
-  stackVersion: 'v1'
+  stackVersion: 'v2'
   stackEnvironment: 'dev'
   stackLocation: 'eastus'
   stackLocationCode: 'us1'
@@ -183,7 +183,7 @@ jobs:
 
   buildDeployDevelopmentBackend:
     # needs: deployDevelopmentIac
-    needs: changes
+    needs: [changes, deployDevelopmentIac]
     name: Build and Deploy Backend App to Development - aspnetcore31_cs
     env: 
       AZURE_FUNCTIONAPP_PACKAGE_PATH: 'backend'    # set this to the path to your web app project, defaults to the repository root
@@ -225,7 +225,7 @@ jobs:
 
   buildDeployDevelopmentFrontend:
     # needs: buildDeployDevelopmentBackend
-    needs: changes
+    needs: [changes, buildDeployDevelopmentBackend]
     name: Deploy Frontend Static App to Development
     environment:
       name: development
